--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -147,7 +147,18 @@ body {
     position: relative;
 }
 
+
+    div.canvas-wrapper:nth-child(1) {
+        z-index: 100;
+    }
+
+    div.canvas-wrapper:nth-child(2) {
+        z-index: 99;
+    }
+
+
 .text-suggestions-list {
+    min-width: 300px;
     margin: 0;
     padding: 0;
     background: map-get($theme-colors, "fourth");
@@ -551,6 +562,7 @@ body {
 }
 
 .collage-canvas {
+    z-index: 10;
     background-color: rgba(map-get($map: $theme-colors, $key: "grey"), 1);
     width: 100%;
     height: 100%;
