--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -534,7 +534,6 @@ body {
     position: absolute;
     top: -8px;
     right: -8px;
-    z-index: 2;
     background-color: rgba(map-get($map: $theme-colors, $key: "danger"), 1);
     padding: 5px 2px 2px;
     color: #000;
@@ -559,6 +558,7 @@ body {
 .ui-icon {
     width: 12px;
     height: 12px;
+    z-index: 0 !important;
 }
 
 .collage-canvas {
@@ -599,7 +599,6 @@ body {
     border-right-width: 2px;
     border-bottom-width: 2px;
     border-color: rgba(map-get($map: $theme-colors, $key: "danger"), 1);
-
     img {
         width: 100%;
         height: 100%;
@@ -612,6 +611,7 @@ body {
         background: transparent;
         min-width: 30px;
         min-height: 30px;
+        z-index: 2;
     }
     &.bitmap {
     }
