--- a/app/components/main-buttons-panel.hbs
+++ b/app/components/main-buttons-panel.hbs
@@ -6,7 +6,7 @@
                 View</button>
             <button class="btn-rescore btn-primary btn" type="button" {{on "click" this.onClickRescoreSomScoredBtn}}>Rescore<br/>SOM View</button>
 
-        {{#if this.debug}}
+        {{#if this.collectorMode}}
             <hr />
             <button class="large special btn-rescore btn-secondary btn" type="button" {{on "click" this.onClickSave}}>Save query</button>
             <hr />
