--- a/app/components/history-panel.hbs
+++ b/app/components/history-panel.hbs
@@ -1,6 +1,6 @@
 <div class="history-panel container fluid panel">
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 p-0">
             <h1 class="panel-title"> History</h1>
             <ul class="history-list"
                 {{did-update this.didUpdateAttrs @model}}
