--- a/app/components/main-buttons-panel.hbs
+++ b/app/components/main-buttons-panel.hbs
@@ -1,7 +1,7 @@
 <div class="main buttons-panel container-fluid col-12">
 
     <div class="row">
-        <div class="rescore-btns-const col-12">
+        <div class="rescore-btns-const col-12 p-0">
             <button class="btn-rescore btn-primary btn" type="button" {{on "click" this.onClickRescoreTopScoredBtn}}>Rescore<br/>Top Scored
                 View</button>
             <button class="btn-rescore btn-primary btn" type="button" {{on "click" this.onClickRescoreSomScoredBtn}}>Rescore<br/>SOM View</button>
@@ -16,7 +16,7 @@
     </div>
 
     <div class="row">
-        <div class="change-view-btns col-12">
+        <div class="change-view-btns col-12 p-0">
             <button class="btn-secondary btn" type="button" {{on "click" this.onClickTopScoredBtn}}>Top Scored
                 View</button>
             <button class="btn-secondary btn" type="button" {{on "click" this.onClickSomBtn}}>SOM View</button>
