--- a/app/components/query-canvas.hbs
+++ b/app/components/query-canvas.hbs
@@ -1,5 +1,5 @@
 
-<div class="canvas-wrapper">
+<div class="canvas-wrapper {{this.canvasElemId}}">
     <div 
         id={{this.canvasElemId}} 
         class="collage-canvas" 
