--- a/app/components/top-buttons-panel.hbs
+++ b/app/components/top-buttons-panel.hbs
@@ -1,4 +1,4 @@
-<div class="top buttons-panel container-fluid col-12">
+<div class="top buttons-panel container-fluid col-12 p-0">
 
     <div class="row">
 
