--- a/app/components/bookmarks-panel.hbs
+++ b/app/components/bookmarks-panel.hbs
@@ -1,8 +1,10 @@
 <div class="bookmarks-panel container fluid panel">
     <div class="row">
-        <div class="col-12">
-
+        <div class="col-4 p-0">
             <h1 class="panel-title small"> Bookmarks</h1>
+        </div>
+        <div class="col-8">
+
             <ul class="bookmarks-list"
                 {{did-update this.didUpdateAttrs @frames}}
             >
