--- a/app/components/likes-panel.hbs
+++ b/app/components/likes-panel.hbs
@@ -1,8 +1,10 @@
 <div class="likes-panel container fluid panel">
     <div class="row">
-        <div class="col-12">
-
+        <div class="col-4 p-0">
             <h2 class="panel-title small"> Likes</h2>
+        </div>
+        <div class="col-8">
+
             <ul class="likes-list"
                 {{did-update this.didUpdateAttrs @frames}}
             >
