Huge refactor & cleanup. Remove the obsolete API config dependencies. Use the OpenAPI specification.

--- a/app/components/main-buttons-panel.hbs
+++ b/app/components/main-buttons-panel.hbs
@@ -17,9 +17,9 @@
 
     <div class="row">
         <div class="change-view-btns col-12 p-0">
-            <button class="btn-secondary btn" type="button" {{on "click" this.onClickTopScoredBtn}}>Top Scored
+            <button class="{{this.ELEM_CLASSES.GOTO_TOP_SCORED_BTN}} btn-secondary btn" type="button" {{on "click" this.onClickTopScoredBtn}}>Top Scored
                 View</button>
-            <button class="btn-secondary btn" type="button" {{on "click" this.onClickSomBtn}}>SOM View</button>
+            <button class="btn-som btn-secondary btn" type="button" {{on "click" this.onClickSomBtn}}>SOM View</button>
         </div>
     </div>
 </div>
