--- a/app/components/main-panel.hbs
+++ b/app/components/main-panel.hbs
@@ -9,7 +9,7 @@
 
 <LikesPanel @frames={{@model.userContext.search.likedFrames}} />
 
-<MainButtonsPanel />
+<MainButtonsPanel @model={{@model}}/>
 
 <BookmarksPanel @frames={{@model.userContext.bookmarkedFrames}} />
 
