Implemented query relocation

--- a/app/components/frame.hbs
+++ b/app/components/frame.hbs
@@ -2,7 +2,7 @@
     style={{thumb this.thumbsUrlPrefix @frame.src}} 
     data-id={{@frame.id}}
     {{on "wheel" this.onWheel}}
-    {{on "click" this.onLikeFrame}}
+    {{on "click" this.onClickFrame}}
 >
     <div class="frame-overlay"data-id={{@frame.id}} >
         <button type="button" class="btn-bookmark btn btn-warning"
