--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -26,6 +26,7 @@
 
   <section class="modals section">
     <DetailWindow />
+    <RelocationWindow />
     <ReplayWindow />
 
     <CollectorWindow @model={{@model}} />
