--- a/app/components/main-panel.hbs
+++ b/app/components/main-panel.hbs
@@ -5,6 +5,8 @@
 
 <TextSearchPanel @model={{@model}} />
 
+<RelocationPanel @model={{@model}} />
+
 <CanvasQueryPanel @model={{@model}} />
 
 <LikesPanel @frames={{@model.userContext.search.likedFrames}} />
