--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -846,3 +846,7 @@ div.canvas-wrapper:nth-child(2) {
 .second-canvas {
     position: absolute;
 }
+
+.rescore-btns-const hr {
+    display: none;
+}
