--- a/app/components/detail-window.hbs
+++ b/app/components/detail-window.hbs
@@ -2,6 +2,7 @@
 <div class="custom-modal-window detail-window-modal {{if this.windowVisible "visible"}}">
     <div id={{this.ELEM_IDS.DETAIL_WINDOW}} 
         class="detail-window"
+        {{on "scroll" this.onScroll}}    
     >
         <div id={{this.ELEM_IDS.DETAIL_WINDOW_SLIDER}} 
             class="slider-row"
