Added keybord keybinds

--- a/app/components/main-buttons-panel.hbs
+++ b/app/components/main-buttons-panel.hbs
@@ -4,6 +4,8 @@
         <div class="rescore-btns-const col-12 p-0">
             <button class="btn-rescore btn-primary btn" type="button" {{on "click" this.onClickRescoreTopScoredBtn}}>Rescore<br/>Top Scored
                 View</button>
+            <button class="btn-rescore btn-primary btn" type="button" {{on "click" this.onClickRescoreTopScoredContextBtn}}>Rescore<br/>Top Sc.
+                Context View</button>
             <button class="btn-rescore btn-primary btn" type="button" {{on "click" this.onClickRescoreSomScoredBtn}}>Rescore<br/>SOM View</button>
 
         {{#if this.collectorMode}}
