Added login/logout buttons, Submit notif if not logged in

--- a/app/components/settings-window.hbs
+++ b/app/components/settings-window.hbs
@@ -13,6 +13,8 @@
 
                 <hr />
 
+                <button class="btn-secondary btn" type="button" {{on "click" this.login}}>Login to eval server</button>
+                <button class="btn-secondary btn" type="button" {{on "click" this.logout}}>Logout from eval server</button>
                 
 
             </div>
