--- a/app/components/main-buttons-panel.hbs
+++ b/app/components/main-buttons-panel.hbs
@@ -2,11 +2,10 @@
 
     <div class="row">
         <div class="rescore-btns-const col-12 p-0">
-            <button class="btn-rescore btn-primary btn" type="button" {{on "click" this.onClickRescoreTopScoredBtn}}>Rescore<br/>Top Scored
-                View</button>
-            <button class="btn-rescore btn-primary btn" type="button" {{on "click" this.onClickRescoreTopScoredContextBtn}}>Rescore<br/>Top Sc.
-                Context View</button>
-            <button class="btn-rescore btn-primary btn" type="button" {{on "click" this.onClickRescoreSomScoredBtn}}>Rescore<br/>SOM View</button>
+            <button class="btn-rescore btn-primary btn" type="button" {{on "click" this.onClickRescoreTopScoredBtn}}>Rescore<br/>Top Scored</button>
+            <button class="btn-rescore btn-primary btn" type="button" {{on "click" this.onClickRescoreTopScoredContextBtn}}>Rescore<br/>Top Scored
+                Context</button>
+            <button class="btn-rescore btn-primary btn" type="button" {{on "click" this.onClickRescoreSomScoredBtn}}>Rescore<br/>SOM </button>
 
         {{#if this.collectorMode}}
             <hr />
